the form "ColAlloc: cols[5].sinv already allocated."

20111024
  amplodbc.c: Add optional strings 'nsmix=...' and 'write=append' or
'write=drop' to the possibilities for strings in table declarations
for tables handled by the ODBC table handler (usually called
ampltabl.dll), and allow 'verbose=n', with 0 <= n <= 3, as
alternatives to 'verbose'.  For details, in an AMPL session with
the updated ampltabl.dll loaded, issue the command
	print _handler_desc['odbc'];

20120306
  amplodbc.c:  Fix a glitch with the default 'nsmix' that caused
some numeric strings, such as 100000 (but not 10000) to be treated
as string rather than numeric values.  Fix a bug in parsing
"write=drop" or "write=append" that sometimes resulted in an erroneous
error message.
  fullbit.c, simpbit.c: allow optional strings 'lib-bit' or 'simple-bit'.
  Add source files tableproxy.c and tableproxyver.h; add rules involving
them to makefile.linux and makefile.vc; omit makefile.sgi.
See http://www.ampl.com/NEW/TABLEPROXY/ .

20120315
  amplodbc.c:  Fix a glitch in the error message for missing columns:
a buffer was too small, leading to a possible fault with tables having
many columns.
   There appears to be a bug in some versions of Microsoft's ODBC
processing for Excel that causes too few columns to be reported for
tables having more than 255 columns.  This may only be an issue with
*.xlsx files, as MS Access and Excel limit (most or all?) other
kinds of files they produce to at most 255 columns.

20120402
 tableproxy.c:  fix faults in tableproxy*.exe in processing some error
messages and recycling string buffers.

20120405
 tableproxy.c:  when a shared-library name (such as ampltabl.dll)
does not contain a slash (or, for MS Windows, start with a drive
letter), have tableproxy*.exe look in $ampl_libpath (if set) for the
library.  Note that AMPL versions starting with 20120404 export
$ampl_libpath.  When $ampl_libpath is not set, behave as though
$ampl_libpath were set to the current directory.