@@ -1,6 +1,6 @@
 README	ad178e0	5649
 TABLES.RME	e1af6e2b	20602
-amplodbc.c	a0782a1	67878
+amplodbc.c	25faa4e	67828
 ampltabl.def	1da9d5ac	95
 calories.tab	14a2b55e	528
 diet.mod	f15d930d	394
